--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,11 +9,7 @@ repos:
         verbose: true
         pass_filenames: false
         always_run: true
-    -   id: pylint
-        name: pylint
-        entry: pylint
-        language: system
-        types: [python]
+
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.5.0
     hooks:
@@ -28,3 +24,10 @@ repos:
     rev: 3.8.0a2  # pick a git hash / tag to point to
     hooks:
     -   id: flake8
+-   repo: https://github.com/Botpy/pre-commit-pylint.git
+    sha: v0.0.2
+    hooks:
+    -   id: pylint-score-limit
+        args:
+        - --limit=8.5
+        - --rcfile=./.pylintrc
