--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,8 @@ repos:
     rev: 3.8.0a2  # pick a git hash / tag to point to
     hooks:
     -   id: flake8
+        args:
+            - --max-line-length=100
 -   repo: https://github.com/Botpy/pre-commit-pylint.git
     sha: v0.0.2
     hooks:
